fix viewheight scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ html {
     background-color: #c7f0d8;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
 img {
@@ -15,7 +16,7 @@ body {
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 }
 
 .container {
